# omniform

./: .gitignore  LICENSE  README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.css.append  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dependencies.rs  downloads.rs  history.rs  lib.rs  main.rs
src/components/: DependencyBanner.tsx  QueueItem.tsx  UrlForm.tsx
src/hooks/: useDownloadQueue.ts
src/types/: index.ts
